--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=600" />
+    <meta name="viewport" content="width=600, shrink-to-fit=yes" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Simple-Clock</title>
     <link rel="stylesheet" href="./css/style.css" />
@@ -10,6 +10,10 @@
 
   <body>
     <div id="clock"></div>
+    <p>
+      Contribution to Daniel Shiffman's<br />
+      <a href="https://thecodingtrain.com/CodingChallenges/074-clock.html">Clock - Coding Challenge #74</a>
+    </p>
     <script src="./js/clock.js"></script>
   </body>
 </html>
