--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=600, shrink-to-fit=yes" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Simple-Clock</title>
+    <title>BB-Clock</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
 
