--- a/index.html
+++ b/index.html
@@ -5,15 +5,25 @@
     <meta name="viewport" content="width=600, shrink-to-fit=yes" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>BB-Clock</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/style.min.css" />
   </head>
 
   <body>
     <div id="clock"></div>
     <p>
+      <label class="switchH">
+        <input type="checkbox" />
+        <span class="slider">
+          <span>IO</span>
+          <span>A</span>
+        </span>
+      </label>
+    </p>
+
+    <p>
       Contribution to Daniel Shiffman's<br />
       <a href="https://thecodingtrain.com/CodingChallenges/074-clock.html">Clock - Coding Challenge #74</a>
     </p>
-    <script src="./js/clock.js"></script>
+    <script src="./js/clock.min.js"></script>
   </body>
 </html>
